# markdown-to-data

./: .gitignore  Areas for Improvment 2.md  Areas for Improvment.md  LICENSE  README.md  mapping.py  pyproject.toml  requirements.txt  test.py  test_cli.py  test_test.py
.github/workflows/: python-package.yml
archive/: archive.py  markdown_to_data.py
archive/markdown_to_data/: __init__.py  data_to_markdown.py  markdown_to_data.py
archive/markdown_to_data/formats/: formats.py  lists.py  tables.py
markdown_to_data/: __init__.py  markdown_to_data.py
markdown_to_data/convert/: finalize.py
markdown_to_data/convert/classification/: classification.py
markdown_to_data/convert/classification/code/: code.py
markdown_to_data/convert/hierarchy/: hierarchy.py
markdown_to_data/convert/joining_and_extraction/: extraction.py  join.py
markdown_to_data/to_data/joining_and_extraction/: extraction.py  join.py
markdown_to_data/to_md/: md_elements_list.py  to_md_parser.py
markdown_to_data/to_md/md_elements/: to_md_blockquotes.py  to_md_def_lists.py  to_md_headers.py  to_md_lists.py  to_md_metadata.py  to_md_paragraphs.py  to_md_tables.py
markdown_to_data/utils/: classification.py  extraction_helper.py  finalize.py  merging.py  metadata.py
markdown_to_data/utils/classification/metadata/: metadata.py
markdown_to_data/utils/hierarchy/: hierarchy.py
markdown_to_data/utils/joining_and_extraction/: join.py
scripts/: README.md  run_tests.py  script_test_update_dependencies.py  update_dependencies.py
src/markdown_to_data/: __init__.py  markdown_to_data.py
src/markdown_to_data/cli_tool/: PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  __init__.py  cli_tool_requirements.md  development_plan.md  main.py
src/markdown_to_data/to_data/: finalize.py
src/markdown_to_data/to_md/: to_md_parser.py
src/markdown_to_data/to_python/: to_python_objects.py
tests/: test_blockquotes.py  test_def_lists.py  test_lists.py  test_markdown_class.py  test_md_code_blocks.py  test_metadata.py  test_parsing_from_data_to_md_and_back.py  test_tables.py  test_update_dependencies.py
tests/dependencies/: test_update_dependencies.py
tests/deprecated/: test_def_lists.py  test_metadata.py
tests/md_elements/: test_enhanced_md_elements.py
tests/to_data/: test_blockquotes_to_data.py  test_lists_to_data.py  test_markdown_class_to_data.py  test_md_code_blocks_to_data.py  test_metadata_to_data.py  test_tables_to_data.py
tests/to_md/: test_blockquotes_to_md.py  test_code_to_md.py  test_def_lists_to_md.py  test_headers_to_md.py  test_lists_to_md.py  test_metadata_to_md.py  test_paragraphs_to_md.py  test_tables_to_md.py
tests/to_python/classification/: test_classify_md_code.py  test_classify_md_definition_list.py  test_classify_md_lists.py  test_classify_md_table_row.py  test_md_classification.py
tests/to_python/conversion/: test_conversion_classified_headers.py  test_conversion_classified_paragraphs.py  test_conversion_classified_separators.py
tests/to_python/hierarchy/: test_hierarchy.py
tests/to_python/merging/: test_mergin_classified_code.py  test_merging_classified_blockquotes.py  test_merging_classified_definition_lists.py  test_merging_classified_lists.py  test_merging_classified_tables.py  test_merging_metadata.py
(+44 files in other folders)
