[project]
name = "markdown-to-data"
version = "1.0.0"
description = "Convert markdown and its elements (tables, lists, code, etc.) into structured, easily processable data formats like lists and hierarchical dictionaries (or JSON), with support for parsing back to markdown."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Lennart Pollvogt", email = "lennartpollvogt@protonmail.com" },
]
requires-python = ">=3.10"
keywords = [
    "markdown",
    "md",
    "markdown-to-data",
    "markdown-to-json",
    "markdown-parser",
    "parser",
    "parsing",
    "json",
    "tables",
    "lists",
    "cli",
    "command-line",
    "conversion",
    "extraction",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = 'https://github.com/lennartpollvogt/markdown-to-data'
Repository = 'https://github.com/lennartpollvogt/markdown-to-data'

[project.optional-dependencies]
cli = [
    "click>=8.0.0",
    "rich>=13.0.0", 
    "psutil>=5.8.0",
]

[project.scripts]
m2d = "markdown_to_data.cli_tool.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3", "rich>=13.9.4", "ruff>=0.8.4"]
test = ["pytest>=8.3.3", "pytest-cov>=4.0.0"]
cli = ["click>=8.0.0", "rich>=13.0.0", "psutil>=5.8.0"]

[tool.hatchling.build.targets.wheel]
packages = ["src/markdown_to_data"]
